IGNITE-15285 Properly splitting ConfigurationManager instances (node and cluster) (#273)