@@ -24,32 +24,31 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import org.apache.ignite.app.Ignite;
 import org.apache.ignite.app.Ignition;
 import org.apache.ignite.configuration.RootKey;
-import org.apache.ignite.configuration.annotation.ConfigurationType;
 import org.apache.ignite.configuration.schemas.network.NetworkConfiguration;
 import org.apache.ignite.configuration.schemas.network.NetworkView;
 import org.apache.ignite.configuration.schemas.rest.RestConfiguration;
 import org.apache.ignite.configuration.schemas.runner.ClusterConfiguration;
 import org.apache.ignite.configuration.schemas.runner.NodeConfiguration;
+import org.apache.ignite.configuration.schemas.table.TableValidator;
 import org.apache.ignite.configuration.schemas.table.TablesConfiguration;
 import org.apache.ignite.internal.affinity.AffinityManager;
 import org.apache.ignite.internal.baseline.BaselineManager;
 import org.apache.ignite.internal.configuration.ConfigurationManager;
-import org.apache.ignite.internal.configuration.storage.ConfigurationStorage;
 import org.apache.ignite.internal.manager.IgniteComponent;
 import org.apache.ignite.internal.metastorage.MetaStorageManager;
 import org.apache.ignite.internal.processors.query.calcite.SqlQueryProcessor;
 import org.apache.ignite.internal.raft.Loza;
 import org.apache.ignite.internal.schema.SchemaManager;
+import org.apache.ignite.internal.schema.configuration.SchemaTableValidatorImpl;
 import org.apache.ignite.internal.storage.DistributedConfigurationStorage;
 import org.apache.ignite.internal.storage.LocalConfigurationStorage;
 import org.apache.ignite.internal.table.distributed.TableManager;
@@ -208,37 +207,36 @@ public class IgnitionImpl implements Ignition {
 
             vaultMgr.putName(nodeName).join();
 
-            List<RootKey<?, ?>> rootKeys = Arrays.asList(
+            List<RootKey<?, ?>> nodeRootKeys = List.of(
                 NetworkConfiguration.KEY,
                 NodeConfiguration.KEY,
-                ClusterConfiguration.KEY,
-                TablesConfiguration.KEY,
                 RestConfiguration.KEY
             );
 
-            List<ConfigurationStorage> cfgStorages =
-                new ArrayList<>(Collections.singletonList(new LocalConfigurationStorage(vaultMgr)));
-
             // Bootstrap node configuration manager.
-            ConfigurationManager nodeConfigurationMgr = doStartComponent(
+            ConfigurationManager nodeCfgMgr = doStartComponent(
                 nodeName,
                 startedComponents,
-                new ConfigurationManager(rootKeys, cfgStorages)
+                new ConfigurationManager(
+                    nodeRootKeys,
+                    Map.of(),
+                    new LocalConfigurationStorage(vaultMgr)
+                )
             );
 
             if (cfgContent != null) {
                 try {
-                    nodeConfigurationMgr.bootstrap(cfgContent, ConfigurationType.LOCAL);
+                    nodeCfgMgr.bootstrap(cfgContent);
                 }
                 catch (Exception e) {
                     LOG.warn("Unable to parse user-specific configuration, default configuration will be used: {}", e.getMessage());
                 }
             }
             else
-                nodeConfigurationMgr.configurationRegistry().startStorageConfigurations(ConfigurationType.LOCAL);
+                nodeCfgMgr.configurationRegistry().initializeDefaults();
 
             NetworkView netConfigurationView =
-                nodeConfigurationMgr.configurationRegistry().getConfiguration(NetworkConfiguration.KEY).value();
+                nodeCfgMgr.configurationRegistry().getConfiguration(NetworkConfiguration.KEY).value();
 
             var serializationRegistry = new MessageSerializationRegistryImpl();
 
@@ -271,20 +269,28 @@ public class IgnitionImpl implements Ignition {
                 startedComponents,
                 new MetaStorageManager(
                     vaultMgr,
-                    nodeConfigurationMgr,
+                    nodeCfgMgr,
                     clusterNetSvc,
                     raftMgr
                 )
             );
 
             // TODO IGNITE-14578 Bootstrap configuration manager with distributed configuration.
-            cfgStorages.add(new DistributedConfigurationStorage(metaStorageMgr, vaultMgr));
+
+            List<RootKey<?, ?>> clusterRootKeys = List.of(
+                ClusterConfiguration.KEY,
+                TablesConfiguration.KEY
+            );
 
             // Start cluster configuration manager.
-            ConfigurationManager clusterConfigurationMgr = doStartComponent(
+            ConfigurationManager clusterCfgMgr = doStartComponent(
                 nodeName,
                 startedComponents,
-                new ConfigurationManager(rootKeys, cfgStorages)
+                new ConfigurationManager(
+                    clusterRootKeys,
+                    Map.of(TableValidator.class, Set.of(SchemaTableValidatorImpl.INSTANCE)),
+                    new DistributedConfigurationStorage(metaStorageMgr, vaultMgr)
+                )
             );
 
             // Baseline manager startup.
@@ -292,7 +298,7 @@ public class IgnitionImpl implements Ignition {
                 nodeName,
                 startedComponents,
                 new BaselineManager(
-                    clusterConfigurationMgr,
+                    clusterCfgMgr,
                     metaStorageMgr,
                     clusterNetSvc
                 )
@@ -303,7 +309,7 @@ public class IgnitionImpl implements Ignition {
                 nodeName,
                 startedComponents,
                 new AffinityManager(
-                    clusterConfigurationMgr,
+                    clusterCfgMgr,
                     metaStorageMgr,
                     baselineMgr
                 )
@@ -314,7 +320,7 @@ public class IgnitionImpl implements Ignition {
                 nodeName,
                 startedComponents,
                 new SchemaManager(
-                    clusterConfigurationMgr,
+                    clusterCfgMgr,
                     metaStorageMgr,
                     vaultMgr
                 )
@@ -325,7 +331,8 @@ public class IgnitionImpl implements Ignition {
                 nodeName,
                 startedComponents,
                 new TableManager(
-                    clusterConfigurationMgr,
+                    nodeCfgMgr,
+                    clusterCfgMgr,
                     metaStorageMgr,
                     schemaMgr,
                     affinityMgr,
@@ -346,7 +353,8 @@ public class IgnitionImpl implements Ignition {
             doStartComponent(
                 nodeName,
                 startedComponents,
-                new RestModule(nodeConfigurationMgr));
+                new RestModule(nodeCfgMgr, clusterCfgMgr)
+            );
 
             // Deploy all resisted watches cause all components are ready and have registered their listeners.
             metaStorageMgr.deployWatches();
@@ -375,8 +383,8 @@ public class IgnitionImpl implements Ignition {
                 nodeName,
                 distributedTblMgr,
                 qryProc,
-                nodeConfigurationMgr,
-                clusterConfigurationMgr
+                nodeCfgMgr,
+                clusterCfgMgr
             );
         }
         catch (Exception e) {
